--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,5 +2,6 @@
     android:id="@+id/movie_poster"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:adjustViewBounds="true"
     android:contentDescription="@string/movie_poster"
     android:scaleType="centerInside" />
